// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`func-call-arg-spacing applies fixes to callbacks 1`] = `
Object {
  "errorCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": "/Users/neil/Projects/personal/eslint-plugin-wyze/lib/rules/__tests__/fixtures/func-call-arg-spacing/callbacks.js",
      "messages": Array [],
      "output": "
const a = properties
  .filter(prop => !prop.computed)

const b = properties
  .map(prop => prop.key.name)

const c = properties
  .filter(prop => !prop.computed)
  .map(prop => prop.key.name)

const app = { use: () => {} }

app.use(( req, res ) => {})

[ 1 ].filter(x => x)
",
      "warningCount": 0,
    },
  ],
  "warningCount": 0,
}
`;

exports[`func-call-arg-spacing applies fixes to functions with no args 1`] = `
Object {
  "errorCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": "/Users/neil/Projects/personal/eslint-plugin-wyze/lib/rules/__tests__/fixtures/func-call-arg-spacing/no-args.js",
      "messages": Array [],
      "output": "
const f = ( a, b ) => a + b

f()
",
      "warningCount": 0,
    },
  ],
  "warningCount": 0,
}
`;

exports[`func-call-arg-spacing applies fixes to multiline functions 1`] = `
Object {
  "errorCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": "/Users/neil/Projects/personal/eslint-plugin-wyze/lib/rules/__tests__/fixtures/func-call-arg-spacing/multi-line.js",
      "messages": Array [],
      "output": "
const f = ( a, b ) => a + b

f(1,
  2)
f(1,
  2)
f(1,
  2)
",
      "warningCount": 0,
    },
  ],
  "warningCount": 0,
}
`;

exports[`func-call-arg-spacing applies fixes to single line functions 1`] = `
Object {
  "errorCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": "/Users/neil/Projects/personal/eslint-plugin-wyze/lib/rules/__tests__/fixtures/func-call-arg-spacing/single-line.js",
      "messages": Array [],
      "output": "
const f = ( a, b ) => a + b

f(1, 2)
f(1, 2)
f(1, 2)
",
      "warningCount": 0,
    },
  ],
  "warningCount": 0,
}
`;
